--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "voxel-hello-world",
-  "version": "0.6.0",
+  "name": "cdo-voxel",
+  "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "git@github.com:maxogden/voxel-hello-world.git"
+    "url": "git@github.com:wjordan/cdo-voxel.git"
   },
   "dependencies": {
-    "voxel": "0.3.1",
-    "voxel-engine": "~0.18.0",
-    "voxel-highlight": "0.0.9",
-    "voxel-player": "0.1.0",
-    "voxel-fly": "~0.1.0",
-    "voxel-walk": "git://github.com/flyswatter/voxel-walk.git",
-    "extend": "1.1.3"
+    "extend": ">=2.0.0",
+    "voxel": ">=0.4.0",
+    "voxel-engine": ">=0.20.1",
+    "voxel-fly": ">=0.1.0",
+    "voxel-highlight": ">=0.0.10",
+    "voxel-player": ">=0.1.0",
+    "voxel-walk": ">=0.0.5"
   },
   "devDependencies": {
-    "browserify": "1.17.3",
-    "beefy": "0.0.11"
+    "beefy": ">=2.1.1",
+    "browserify": ">=7.0.0"
   },
   "scripts": {
     "start": "beefy test.js:bundle.js 8080"
