latest deathcap build dependencies working

--- a/package.json
+++ b/package.json
@@ -6,19 +6,74 @@
     "url": "git@github.com:wjordan/cdo-voxel.git"
   },
   "dependencies": {
-    "extend": ">=2.0.0",
-    "voxel": ">=0.4.0",
-    "voxel-engine": ">=0.20.1",
-    "voxel-fly": ">=0.1.0",
-    "voxel-highlight": ">=0.0.10",
-    "voxel-player": ">=0.1.0",
-    "voxel-walk": ">=0.0.5"
+    "camera-debug": "git://github.com/deathcap/camera-debug.git",
+    "ever": "0.0.3",
+    "inventory": "git://github.com/deathcap/inventory.git",
+    "inventory-window": "git://github.com/deathcap/inventory-window.git",
+    "itempile": "git://github.com/deathcap/itempile.git",
+    "kb-bindings-ui": "git://github.com/deathcap/kb-bindings-ui.git",
+    "voxel-artpacks": "git://github.com/deathcap/voxel-artpacks.git",
+    "voxel-blockdata": "git://github.com/deathcap/voxel-blockdata.git",
+    "voxel-bucket": "git://github.com/deathcap/voxel-bucket.git",
+    "voxel-carry": "git://github.com/deathcap/voxel-carry.git",
+    "voxel-chest": "git://github.com/deathcap/voxel-chest.git",
+    "voxel-chunkborder": "git://github.com/deathcap/voxel-chunkborder.git",
+    "voxel-commands": "git://github.com/deathcap/voxel-commands.git",
+    "voxel-console": "git://github.com/deathcap/voxel-console.git",
+    "voxel-debug": "git://github.com/deathcap/voxel-debug.git",
+    "voxel-decals": "git://github.com/deathcap/voxel-decals.git",
+    "voxel-decorative": "git://github.com/deathcap/voxel-decorative.git",
+    "voxel-drop": "git://github.com/deathcap/voxel-drop.git",
+    "voxel-engine": "git://github.com/deathcap/voxel-engine.git#ndarray",
+    "voxel-fluid": "git://github.com/deathcap/voxel-fluid.git",
+    "voxel-fly": "git://github.com/deathcap/voxel-fly.git",
+    "voxel-food": "git://github.com/deathcap/voxel-food.git",
+    "voxel-fullscreen": "git://github.com/deathcap/voxel-fullscreen.git",
+    "voxel-furnace": "git://github.com/deathcap/voxel-furnace.git",
+    "voxel-gamemode": "git://github.com/deathcap/voxel-gamemode.git",
+    "voxel-glass": "git://github.com/deathcap/voxel-glass.git",
+    "voxel-hammer": "git://github.com/deathcap/voxel-hammer.git",
+    "voxel-harvest": "git://github.com/deathcap/voxel-harvest.git",
+    "voxel-health": "git://github.com/deathcap/voxel-health.git",
+    "voxel-health-bar": "git://github.com/deathcap/voxel-health-bar.git",
+    "voxel-health-fall": "git://github.com/deathcap/voxel-health-fall.git",
+    "voxel-inventory-crafting": "git://github.com/deathcap/voxel-inventory-crafting.git",
+    "voxel-inventory-creative": "git://github.com/deathcap/voxel-inventory-creative.git",
+    "voxel-inventory-hotbar": "git://github.com/deathcap/voxel-inventory-hotbar.git",
+    "voxel-keys": "git://github.com/deathcap/voxel-keys.git",
+    "voxel-land": "git://github.com/deathcap/voxel-land.git",
+    "voxel-measure": "git://github.com/deathcap/voxel-measure.git",
+    "voxel-mine": "git://github.com/deathcap/voxel-mine.git",
+    "voxel-outline": "git://github.com/deathcap/voxel-outline.git",
+    "voxel-pickaxe": "git://github.com/deathcap/voxel-pickaxe.git",
+    "voxel-player": "git://github.com/deathcap/voxel-player.git",
+    "voxel-plugins": "git://github.com/deathcap/voxel-plugins.git",
+    "voxel-plugins-ui": "git://github.com/deathcap/voxel-plugins-ui.git",
+    "voxel-pumpkin": "git://github.com/deathcap/voxel-pumpkin.git",
+    "voxel-quarry": "git://github.com/deathcap/voxel-quarry.git",
+    "voxel-reach": "git://github.com/deathcap/voxel-reach.git",
+    "voxel-recipes": "git://github.com/deathcap/voxel-recipes.git",
+    "voxel-registry": "git://github.com/deathcap/voxel-registry.git",
+    "voxel-sfx": "git://github.com/deathcap/voxel-sfx.git",
+    "voxel-skyhook": "git://github.com/deathcap/voxel-skyhook.git",
+    "voxel-sprint": "git://github.com/deathcap/voxel-sprint.git",
+    "voxel-start": "git://github.com/deathcap/voxel-start.git",
+    "voxel-stitch": "git://github.com/deathcap/voxel-stitch.git",
+    "voxel-use": "git://github.com/deathcap/voxel-use.git",
+    "voxel-virus": "git://github.com/deathcap/voxel-virus.git",
+    "voxel-voila": "git://github.com/deathcap/voxel-voila.git",
+    "voxel-webview": "git://github.com/deathcap/voxel-webview.git",
+    "voxel-wireframe": "git://github.com/deathcap/voxel-wireframe.git",
+    "voxel-wool": "git://github.com/deathcap/voxel-wool.git",
+    "voxel-workbench": "git://github.com/deathcap/voxel-workbench.git",
+    "voxel-zen": "git://github.com/deathcap/voxel-zen.git"
   },
   "devDependencies": {
-    "beefy": ">=2.1.1",
-    "browserify": ">=7.0.0"
+    "coffeeify": "0.6.0",
+    "browserify": "7.0.0",
+    "beefy": ">=2.1.1"
   },
   "scripts": {
-    "start": "beefy test.js:bundle.js 8080"
+    "start": "beefy index.coffee:bundle.js 8080 -- --transform coffeeify --debug"
   }
 }
